--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ frozenlist==1.4.1
 idna==3.7
 macholib==1.16.3
 multidict==6.0.5
+openai==0.28.0
 packaging==24.0
 pefile==2023.2.7
 pydexcom==0.3.2
@@ -20,6 +21,7 @@ pywin32-ctypes==0.2.2
 requests==2.31.0
 setuptools==75.1.0
 SQLAlchemy==2.0.35
+tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==2.2.1
 yarl==1.9.4
